--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 html{
-  background-color: rgb(255, 255, 255);
+  background-color: black;
   scroll-behavior: smooth;
 }
 
